force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/RV_Customer_Sales_Negotiator_Filter__c.object-meta.xml
<CustomObject>
    <label>Customer Sales Negotiator Filter</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Customer Sales Negotiator Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Sales Negotiator Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>