force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/Account_Name_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Sales Negotiator Filters</relationshipLabel>
    <relationshipName>Customer_Sales_Negotiator_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>