force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Customer Sales Negotiator Filters</relationshipLabel>
    <relationshipName>Customer_Sales_Negotiator_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>