force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/DepotLong__c.field-meta.xml
<CustomField>
    <fullName>DepotLong__c</fullName>
    <label>DepotLong</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>