force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/Energy_Tax__c.field-meta.xml
<CustomField>
    <fullName>Energy_Tax__c</fullName>
    <label>Energy Tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxed</fullName>
            </value>
            <value>
                <fullName>Untaxed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>