force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/Mode_Of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Transport__c</fullName>
    <label>Mode Of Transport</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barage</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Pipe</fullName>
            </value>
            <value>
                <fullName>ITT</fullName>
            </value>
            <value>
                <fullName>Truck-10</fullName>
            </value>
            <value>
                <fullName>Barge-30</fullName>
            </value>
            <value>
                <fullName>ITT-80</fullName>
            </value>
            <value>
                <fullName>Rail-21</fullName>
            </value>
            <value>
                <fullName>Truck-11</fullName>
            </value>
            <value>
                <fullName>Barge-31</fullName>
            </value>
            <value>
                <fullName>Rail-20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>