force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/MOT__c.field-meta.xml
<CustomField>
    <fullName>MOT__c</fullName>
    <label>MOT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rv_MOT</valueSetName>
    </valueSet>
</CustomField>