force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/MRC_Name__c.field-meta.xml
<CustomField>
    <fullName>MRC_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRC Name</label>
    <referenceTo>MRC__c</referenceTo>
    <relationshipLabel>Customer Sales Negotiator Filters</relationshipLabel>
    <relationshipName>Customer_Sales_Negotiator_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>