force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/MRC_Number__c.field-meta.xml
<CustomField>
    <fullName>MRC_Number__c</fullName>
    <label>MRC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>