force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/MRC_Numbers__c.field-meta.xml
<CustomField>
    <fullName>MRC_Numbers__c</fullName>
    <label>MRC Numbers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>