force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/OLF_MRC_Only__c.field-meta.xml
<CustomField>
    <fullName>OLF_MRC_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OLF MRC Only</label>
    <type>Checkbox</type>
</CustomField>