force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <label>PO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TSFP</fullName>
            </value>
            <value>
                <fullName>TTTT</fullName>
            </value>
            <value>
                <fullName>TTTI</fullName>
            </value>
            <value>
                <fullName>Dummy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>