force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>IGO</fullName>
            </value>
            <value>
                <fullName>MOGAS</fullName>
            </value>
            <value>
                <fullName>GTL</fullName>
            </value>
            <value>
                <fullName>LNG</fullName>
            </value>
            <value>
                <fullName>Retail Mix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>