force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/retailMix__c.field-meta.xml
<CustomField>
    <fullName>retailMix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>retailMix</label>
    <type>Checkbox</type>
</CustomField>