force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/Sales_Negotiator__c.field-meta.xml
<CustomField>
    <fullName>Sales_Negotiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Negotiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Sales_Negotiator_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>