force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Sales Negotiator Filters (Ship To Name)</relationshipLabel>
    <relationshipName>Customer_Sales_Negotiator_Filters1</relationshipName>
    <type>Lookup</type>
</CustomField>