force-app/main/default/objects/RV_Customer_Sales_Negotiator_Filter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name_Sold_To__c</columns>
    <columns>Sales_Negotiator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>